--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 server.port=
 verify_token=
 fb_access_token=
+spring.datasource.url=
+spring.datasource.username=
+spring.datasource.password=
+spring.jpa.properties.hibernate.dialect= 
+spring.jpa.hibernate.ddl-auto=
