--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.datasource.username=
 spring.datasource.password=
 spring.jpa.properties.hibernate.dialect= 
 spring.jpa.hibernate.ddl-auto=
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=
