--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.datasource.password=
 spring.jpa.properties.hibernate.dialect= 
 spring.jpa.hibernate.ddl-auto=
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=
+spring.datasource.testOnBorrow=
+spring.datasource.validationQuery=
