--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,13 +4,5 @@ fb_access_token=
 spring.datasource.url=
 spring.datasource.username=
 spring.datasource.password=
-spring.datasource.testOnBorrow=true
-spring.datasource.hikari.poolName=SpringBootJPAHikari
-spring.datasource.hikari.idleTimeout=600000
-spring.datasource.hikari.connection-timeout=30000
-spring.datasource.hikari.validation-query=SELECT 1
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.open-in-view=false
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
